--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
             <a href="tryiton.html">Try It On!</a>
             <a href="about.html">About Us</a>
